# Mephi-Lab-works

./: CMakeLists.txt  Sequence.h
lab1/: CMakeLists.txt  addMatrix.c  addMatrix.h  addMatrixTest.c  addMatrixTest.h  constMultiply.c  constMultiply.h  constMultiplyTest.c  constMultiplyTest.h  linearly.c  linearly.h  linearlyTest.c  linearlyTest.h  multiply.c  multiply.h  multiplyTest.c  multiplyTest.h  run_test.c
lab2/: class.h  main.cpp  test.cpp
lab3/: RectangularMatrix.h  SquareMatrix.h  Stack.h  class.h  classTest.cpp  main.cpp
lab4/: CMakeLists.txt  detours.h  main.cpp  test.cpp
sem2/lab1/: addMatrix.c  addMatrix.h  addMatrixTest.c  addMatrixTest.h  constMultiply.c  constMultiply.h  constMultiplyTest.c  constMultiplyTest.h  linearly.c  linearly.h  linearlyTest.c  linearlyTest.h  main.c  multiply.c  multiply.h  multiplyTest.c  multiplyTest.h  run_test.c
sem2/lab1/lab2/: class.h  test.cpp
sem2/lab1/lab3/: classTest.cpp  main.cpp
sem2/lab1/lab4/: detours.h  main.cpp  test.cpp
sem2/lab2/: CMakeLists.txt  main.cpp
sem2/lab3/: CMakeLists.txt  RectangularMatrix.h  SquareMatrix.h  Stack.h  class.h
sem3/: graph.h  main.cpp
sem3/lab1/: Benchmark.h  CMakeLists.txt  Sequence.h  SmartPointer.h  benchmark.cpp  main.cpp  sequence.h  smartPointer.h  testing.cpp
sem3/lab1/mainPart/: sequence.h  smartPointer.h
sem3/lab1/startBenchmark/: benchmark.cpp
sem3/lab1/tests/: smartPointerTesting.h  startTests.cpp
sem3/lab2/: CMakeLists.txt  Sequence.h  Sorting.h  main.cpp
sem3/lab2/SortsBenchmark/: Benchmark.cpp  benchmark.cpp
sem3/lab2/mainPart/: Sequence.h  SmartPointers.h  main.cpp  sequence.h  smartPointers.h  sorting.h
sem3/lab2/tests/: SequencesTesting.cpp  SequencesTesting.h  SortingMethodsTesting.cpp  SortingMethodsTesting.h  sequencesTesting.cpp  sequencesTesting.h  sortingMethodsTesting.cpp  sortingMethodsTesting.h  startTests.cpp
sem3/lab3/: CMakeLists.txt
sem3/lab3/UI/: UI.cpp
sem3/lab3/forHistogram/: histogram .h  myMap.h  person.h
sem3/lab3/sequence/: human.h  sequences.h  smartPointer.h
sem3/lab3/sequences/: sequence.h  smartPointer.h
sem3/lab3/taskCache/: cache.h  unorderedMap.h
sem3/lab3/tests/: cacheTests.h  histogramTest.h  myMapTest.h  test.cpp  unorderedMaptests.h
sem3/lab4/: CMakeLists.txt  graph.h  main.cpp  test.cpp
